--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation = "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.peterjxl.learnjavamavn.demo1.HelloWorld</mainClass>
+                                    <mainClass>com.peterjxl.learnjavamaven.demo1.HelloWorld</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
